Fixing the bug of wrap's height in other browsers

--- a/css/style.css
+++ b/css/style.css
@@ -66,15 +66,17 @@ body {
 }
 
 .wrap {
-	height: 100%;
+	min-height: 49em;
 	width: 70%;
 	margin: auto;
-	margin-top: 0;
-	padding-top: 7em;
+	padding-top: 10%;
 }
 
 .center-gradient {
 	background: -webkit-radial-gradient(center,ellipse cover,rgba(255,255,255,0.5) 0,rgba(255,255,255,0) 70%);
+	background: -moz-radial-gradient(center,ellipse cover,rgba(255,255,255,0.5) 0,rgba(255,255,255,0) 70%);
+	background: -ms-radial-gradient(center,ellipse cover,rgba(255,255,255,0.5) 0,rgba(255,255,255,0) 70%);
+	background: -o-radial-gradient(center,ellipse cover,rgba(255,255,255,0.5) 0,rgba(255,255,255,0) 70%);
 }
 
 h1, h2, h3, h4, h5, h6 {
